/**
 *
 *	Changelog for xFastTemplate2
 *
 *	0.6.2				Minor codechanges and bugfixes.
 *						Add test(-files) and error template to the project.
 *
 *	0.6.0	2013-01-10	Moved changeloc from the info.php to the CHANGELOG file.
 *						Remove the WebsiteBaker suite and add a Lepton-CMS suite to the project.
 *
 *	0.5.8	2011-03-28	Remove the documentation-files from the project and update the link to the
 *						documentation-files on websitebakers.org. This "outsource" makes it less
 *						problematic for the user to get an actual version of the documentation.
 *						Add link to the example-template to the $module-description.
 *						Bugfix inside the class method "parse_template_file".
 *						Minor cosmetic code-changes and removing typos.
 *						Add new method "get_by_url" - similar to "get_by_source".
 *
 *	0.5.7	2011-03-17	Remove the php4 file from the project.
 *						Add "alter" to "build_mysql_query" (suite: mySQL).
 *						Add guid (private) to the suite-classes.
 *
 *	0.5.5	2011-02-27	Add new function "parse_template_file" to handle marked sections inside
 *						a given template. E.g. <!-- BEGIN keyname:any --> <!-- END keyname:any -->
 *
 *	0.5.4	2011-01-01	Bugfix for wrong version-number inside info.php
 *
 *	0.5.3	2010-12-11	Bugfix inside MySQL-Suite-Class for empty conditions within "build_query".
 *
 *	0.5.2	2010-12-05	Bugfix inside include.php for missplaces pass-by-reference.
 *
 *	0.5.1	2010-12-04	Bugfix inside include.php method build_mysql_query - condition was an empty string.
 *
 *	0.5.0	2010-08-29	Introduce "suites" to keep the base-class small - and prevent to
 *						pre-process unused methods or functions.
 *						Some XHTML-Modifications (e.g. <![CDATA[ for Javascript).
 *
 *	0.4.1	2010-08-02	Minimal code-changes and optimations for WB.
 *
 *	0.4.0	2010-05-14	Add public method "resolve_path" and two new class-properties
 *						'default_path' and 'default_url'.
 *
 *	0.3.2	2010-05-13	Add public method "get_all_by_query"
 *