@@ -200,6 +200,12 @@ class HTML_Template_xFastTemplate2 extends xft2_fms
 					$this->__suites[$name] = new suite_js();
 					$return_value = true;
 					break;
+					
+				case 'css':
+					require_once( dirname(__FILE__)."/suites/css/suite_css.php");
+					$this->__suites[$name] = new suite_css();
+					$return_value = true;
+					break;
 			}
 		} else {
 			$return_value = is_object($this->__suites[$name]);
@@ -1432,6 +1438,14 @@ class HTML_Template_xFastTemplate2 extends xft2_fms
 	 public function clean_up_str (&$aStr) {
 		if (false === $this->__register_suite("js")) return NULL;
 		return $this->__suites['js']->clean_up_str( $aStr );
+	 }
+	 
+	 /**
+	  *	@suite CSS
+	  */
+	 public function optimize_css($aCSS_file, $aTargetFolder= "", $return_result = true) {
+	 	if (false === $this->__register_suite('css')) return NULL;
+	 	return $this->__suites['css']->optimize( $aCSS_file, $aTargetFolder, $return_result );
 	 }
 }
 /** End of Class */	
